# FinalProject

./: MAIN_analyze_data.py  MAIN_create_files_for_analysis.py  Metadata_Participants.csv  README.md  dataset_file_cleanup.py  experiment_statistics.csv  experiment_statistics_file.py  project_structure.txt  pyproject.toml
calculated_average_paths/: AveragePath_01 coucou g.jpg.csv  AveragePath_01 neutre2.avi.csv  AveragePath_01 neutre22.avi.csv  AveragePath_01 neutre3.avi.csv  AveragePath_01vnvg151201b1.avi.csv  AveragePath_02 coucou d.jpg.csv  AveragePath_02 devant.jpg.csv  AveragePath_02 neutre visage gris.jpg.csv  AveragePath_03 bonbons triste vs joie.avi.csv  AveragePath_03 devant.jpg.csv  AveragePath_03 regard chien g.jpg.csv  AveragePath_03 vole triste vs joie1.avi.csv  AveragePath_04 a triste joie.jpg.csv  AveragePath_04 b joie triste - copie.jpg.csv  AveragePath_04 regard chien d.jpg.csv  AveragePath_04 tete chien g.jpg.csv  AveragePath_05 punition orale triste vs joie.avi.csv  AveragePath_05 sophie sous l'eau joie vs triste1.avi.csv  AveragePath_05 tete chien d.jpg.csv  AveragePath_05 tete point chien g.jpg.csv  AveragePath_06 a triste joie.jpg.csv  AveragePath_06 b joie triste.jpg.csv  AveragePath_06 devant point chien g.jpg.csv  AveragePath_06 tete point chien d.jpg.csv  AveragePath_07 cadeau dernier.avi.csv  AveragePath_07 devant point chien d.jpg.csv  AveragePath_07 devant.jpg.csv  AveragePath_07 tombe joie vs triste2.avi.csv  AveragePath_08 b triste joie.jpg.csv  AveragePath_08 devant.jpg.csv  AveragePath_08 voc chien g.jpg.csv  AveragePath_1 coucou D.jpg.csv  (+114 more)
(+68 files in other folders)
