[build-system]
requires = ["setuptools>=68.0", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro_eyetracking_analysis"
version = "1.0.0"
description = "Analyze, clean, and visualize eye-tracking data for neuroscience research."
requires-python = ">=3.8"
authors = [
  { name = "hila", email = "hila.ohayion@gmail.com" },
]
readme = "README.md"

dependencies = [
  "numpy>=1.20,<2.0",
  "pandas>=1.5,<3.0",
  "matplotlib>=3.4,<4.0",
  "scipy>=1.8,<2.0",
  "seaborn>=0.12,<1.0",
]

[tool.black]
line-length = 88

[tool.coverage.run]
branch = true
source = ["src"]
